[tool.poetry]
name = "epaper-pi"
version = "0.1.0"
package-mode = false
description = "E-Paper Display API"
license = "MIT"
authors = [
  "Scientific Computing <ScientificComputing@ansto.gov.au>"
]
maintainers = ["Jacob Oldfield <oldfielj@ansto.gov.au>"]
readme = "README.md"
homepage = "https://github.com/oldfielj-ansto/epaper-pi"
repository = "https://github.com/oldfielj-ansto/epaper-pi"
documentation = "https://github.com/oldfielj-ansto/epaper-pi"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
waveshare-epd = { git = "https://github.com/waveshareteam/e-Paper.git", subdirectory = "RaspberryPi_JetsonNano/python", rev = "a824b4f8f34dee7e721183c0154788dcde41c460" }
numpy = ">=1.26.4,<2.0.0"
pillow = ">=10.4.0,<11.0.0"
RPi_GPIO = "0.7.1,<0.8.0"
spidev = ">=3.6,<4.0"
gpiozero = ">=2.0.1,<3.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"

[tool.black]
line-length = 88
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
ignore = ["**/typing_extensions.py"]
pythonVersion = "3.11"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
